# skill-manager

./: Cargo.toml  README.md  lefthook.yml
.github/workflows/: release.yml
src/: cli.rs  downloader.rs  error.rs  github.rs  main.rs
tests/: integration_test.rs
